News
~~~~

  * Development:

    * Use locking in esmtp-wrapper (Phil Sutter).

    * Update mutt option name in the user manual (Wu Fengguang).

  * Version 1.0 (2008-10-09):

    * Fix NTLM authentication (Nils Rennebarth).

    * Option to disable Message-ID header (Phil Sutter).

  * Version 0.6.0 (2007-09-03):

    * Handle CR-LF newline endings when parsing the headers.

    * Wrapper script for off-line mail delivery (Phil Sutter).

    * Document how to get CA certificates.
    
    * Corrections to the manpages (Reuben Thomas).

    * Tips for adding missing Date: headers in messages for local delivery
    (Bruce Schultz).
    
    * Use a reasonable default for the reverse path when one is not 
    specified, instead of an empty one.

    * Prevent segfault expanding %F in the MDA string when the reverse 
    path is not specified.


  * Version 0.5.1 (2005-03-10):

    * A 'postconnect' keyword to execute a command after closing a SMTP
    connection.

    * Do not attempt to authenticate if no username/password is given.

    * Several configuration fixes/enhancements (SASAJIMA and Dirk Tilger).

    * Enforce strict permissions on configuration file (Tiago Macambira).

    * Allow to set helo-name. Allow to send out local mail as remote mail
    by adding a qualifying domain name. Allow forcing envelope-from and Sender
    headers. Drop possible admin-added sgid priveleges to be dropped after
    reading the config. (Bernhard Link)

    * Do not pass multiple address to the MDA quoted as a single argument
    (Kusanagi Kouichi).
  

  * Version 0.5.0 (2003-11-14):

    * Fixed another bug which prevented to send mail when libesmtp had no
    openssl support (Maurice Galland).
    
    * Detailed documentation on how to use the StartTLS extension. More
    verbosity on StartTLS error messages.
    
    * New 'preconnect' keyword to execute a command prior to opening a SMTP
    connection (Daniel Richard G.).
    