@@ -69,6 +69,7 @@ reverse_path	{ return REVERSE_PATH; }
 sender		{ return SENDER; }
 message_id	{ return MSGID; }
 mda		{ return MDA; }
+force_mda	{ return FORCE_MDA; }
 
 =		{ return MAP; }
 
